examples/test/testpolicy14860.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14860
  namespace: namespace208
spec:
  podSelector:
    matchLabels:
      key22: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value13
          key19: value5
      podSelector:
        matchLabels:
          key13: value16
          key10: value8
          key23: value11
